docs/api/0.2.0/ironwood/io/PrintStream.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.io`](package-summary.md)

# PrintStream

**Class** · `ironwood.io.PrintStream`

```java
public class PrintStream extends OutputStream
```

**Extends:** [`OutputStream`](OutputStream.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`PrintStream(OutputStream)`](#member-PrintStream-28-OutputStream-29-) |  |
| [`print(String)`](#member-print-28-String-29-) |  |
| [`print(Object)`](#member-print-28-Object-29-) |  |
| [`print(char)`](#member-print-28-char-29-) |  |
| [`print(boolean)`](#member-print-28-boolean-29-) |  |
| [`print(int)`](#member-print-28-int-29-) |  |
| [`print(long)`](#member-print-28-long-29-) |  |
| [`print(float)`](#member-print-28-float-29-) |  |
| [`print(double)`](#member-print-28-double-29-) |  |
| [`println()`](#member-println-28--29-) |  |
| [`println(String)`](#member-println-28-String-29-) |  |
| [`println(Object)`](#member-println-28-Object-29-) |  |
| [`println(char)`](#member-println-28-char-29-) |  |
| [`println(boolean)`](#member-println-28-boolean-29-) |  |
| [`println(int)`](#member-println-28-int-29-) |  |
| [`println(long)`](#member-println-28-long-29-) |  |
| [`println(float)`](#member-println-28-float-29-) |  |
| [`println(double)`](#member-println-28-double-29-) |  |
| [`flush()`](#member-flush-28--29-) |  |
| [`checkError()`](#member-checkError-28--29-) |  |
| [`write(int)`](#member-write-28-int-29-) |  |
| [`write(byte[])`](#member-write-28-byte-5b--5d--29-) |  |
| [`write(byte[],int,int)`](#member-write-28-byte-5b--5d--2c-int-2c-int-29-) |  |
| [`close()`](#member-close-28--29-) |  |

## Constructors

<a name="member-PrintStream-28-OutputStream-29-"></a>

### `PrintStream(OutputStream)`

```java
public PrintStream(OutputStream output)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-print-28-String-29-"></a>

### `print(String)`

```java
public void print(String value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-Object-29-"></a>

### `print(Object)`

```java
public void print(Object value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-char-29-"></a>

### `print(char)`

```java
public void print(char value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-boolean-29-"></a>

### `print(boolean)`

```java
public void print(boolean value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-int-29-"></a>

### `print(int)`

```java
public void print(int value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-long-29-"></a>

### `print(long)`

```java
public void print(long value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-float-29-"></a>

### `print(float)`

```java
public void print(float value)
```


[Back to member summary](#member-summary)

<a name="member-print-28-double-29-"></a>

### `print(double)`

```java
public void print(double value)
```


[Back to member summary](#member-summary)

<a name="member-println-28--29-"></a>

### `println()`

```java
public void println()
```


[Back to member summary](#member-summary)

<a name="member-println-28-String-29-"></a>

### `println(String)`

```java
public void println(String value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-Object-29-"></a>

### `println(Object)`

```java
public void println(Object value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-char-29-"></a>

### `println(char)`

```java
public void println(char value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-boolean-29-"></a>

### `println(boolean)`

```java
public void println(boolean value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-int-29-"></a>

### `println(int)`

```java
public void println(int value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-long-29-"></a>

### `println(long)`

```java
public void println(long value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-float-29-"></a>

### `println(float)`

```java
public void println(float value)
```


[Back to member summary](#member-summary)

<a name="member-println-28-double-29-"></a>

### `println(double)`

```java
public void println(double value)
```


[Back to member summary](#member-summary)

<a name="member-flush-28--29-"></a>

### `flush()`

```java
@Override
public void flush()
```


[Back to member summary](#member-summary)

<a name="member-checkError-28--29-"></a>

### `checkError()`

```java
public boolean checkError()
```


[Back to member summary](#member-summary)

<a name="member-write-28-int-29-"></a>

### `write(int)`

```java
@Override
public void write(int value)
```


[Back to member summary](#member-summary)

<a name="member-write-28-byte-5b--5d--29-"></a>

### `write(byte[])`

```java
@Override
public void write(byte[] bytes)
```


[Back to member summary](#member-summary)

<a name="member-write-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `write(byte[],int,int)`

```java
@Override
public void write(byte[] bytes, int offset, int length)
```


[Back to member summary](#member-summary)

<a name="member-close-28--29-"></a>

### `close()`

```java
@Override
public void close()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
