docs/api/0.2.2-beta/ironwood/io/PrintStream.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.io`](package-summary.md)

# PrintStream

**Class** · `ironwood.io.PrintStream`

```java
public class PrintStream extends OutputStream
```

**Extends:** [`OutputStream`](OutputStream.md)

Writes formatted values to a byte stream.


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`PrintStream(OutputStream)`](#member-PrintStream-28-OutputStream-29-) | Creates a new PrintStream. |
| [`print(String)`](#member-print-28-String-29-) | Performs the print operation. |
| [`print(CharSequence)`](#member-print-28-CharSequence-29-) | Prints the supplied characters without creating a String snapshot. |
| [`print(Object)`](#member-print-28-Object-29-) | Performs the print operation. |
| [`print(char)`](#member-print-28-char-29-) | Performs the print operation. |
| [`print(boolean)`](#member-print-28-boolean-29-) | Performs the print operation. |
| [`print(int)`](#member-print-28-int-29-) | Performs the print operation. |
| [`print(long)`](#member-print-28-long-29-) | Performs the print operation. |
| [`print(float)`](#member-print-28-float-29-) | Performs the print operation. |
| [`print(double)`](#member-print-28-double-29-) | Performs the print operation. |
| [`println()`](#member-println-28--29-) | Performs the println operation. |
| [`println(String)`](#member-println-28-String-29-) | Performs the println operation. |
| [`println(CharSequence)`](#member-println-28-CharSequence-29-) | Prints the supplied characters and a line ending without creating a String snapshot. |
| [`println(Object)`](#member-println-28-Object-29-) | Performs the println operation. |
| [`println(char)`](#member-println-28-char-29-) | Performs the println operation. |
| [`println(boolean)`](#member-println-28-boolean-29-) | Performs the println operation. |
| [`println(int)`](#member-println-28-int-29-) | Performs the println operation. |
| [`println(long)`](#member-println-28-long-29-) | Performs the println operation. |
| [`println(float)`](#member-println-28-float-29-) | Performs the println operation. |
| [`println(double)`](#member-println-28-double-29-) | Performs the println operation. |
| [`flush()`](#member-flush-28--29-) | Flushes this output. |
| [`checkError()`](#member-checkError-28--29-) | Performs the check error operation. |
| [`write(int)`](#member-write-28-int-29-) | Writes the supplied data. |
| [`write(byte[])`](#member-write-28-byte-5b--5d--29-) | Writes the supplied data. |
| [`write(byte[],int,int)`](#member-write-28-byte-5b--5d--2c-int-2c-int-29-) | Writes the supplied data. |
| [`close()`](#member-close-28--29-) | Closes this resource. |

## Constructors

<a name="member-PrintStream-28-OutputStream-29-"></a>

### `PrintStream(OutputStream)`

```java
public PrintStream(OutputStream output)
```

Creates a new PrintStream.


[Back to member summary](#member-summary)

## Methods

<a name="member-print-28-String-29-"></a>

### `print(String)`

```java
public void print(String value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-CharSequence-29-"></a>

### `print(CharSequence)`

```java
public void print(CharSequence value)
```

Prints the supplied characters without creating a String snapshot.
A null reference prints `null`.

**Parameters**

| Name | Description |
| --- | --- |
| `value` | the character sequence to print |


[Back to member summary](#member-summary)

<a name="member-print-28-Object-29-"></a>

### `print(Object)`

```java
public void print(Object value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-char-29-"></a>

### `print(char)`

```java
public void print(char value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-boolean-29-"></a>

### `print(boolean)`

```java
public void print(boolean value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-int-29-"></a>

### `print(int)`

```java
public void print(int value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-long-29-"></a>

### `print(long)`

```java
public void print(long value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-float-29-"></a>

### `print(float)`

```java
public void print(float value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-print-28-double-29-"></a>

### `print(double)`

```java
public void print(double value)
```

Performs the print operation.


[Back to member summary](#member-summary)

<a name="member-println-28--29-"></a>

### `println()`

```java
public void println()
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-String-29-"></a>

### `println(String)`

```java
public void println(String value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-CharSequence-29-"></a>

### `println(CharSequence)`

```java
public void println(CharSequence value)
```

Prints the supplied characters and a line ending without creating a
String snapshot.
A null reference prints `null` before the line ending.

**Parameters**

| Name | Description |
| --- | --- |
| `value` | the character sequence to print |


[Back to member summary](#member-summary)

<a name="member-println-28-Object-29-"></a>

### `println(Object)`

```java
public void println(Object value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-char-29-"></a>

### `println(char)`

```java
public void println(char value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-boolean-29-"></a>

### `println(boolean)`

```java
public void println(boolean value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-int-29-"></a>

### `println(int)`

```java
public void println(int value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-long-29-"></a>

### `println(long)`

```java
public void println(long value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-float-29-"></a>

### `println(float)`

```java
public void println(float value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-println-28-double-29-"></a>

### `println(double)`

```java
public void println(double value)
```

Performs the println operation.


[Back to member summary](#member-summary)

<a name="member-flush-28--29-"></a>

### `flush()`

```java
@Override
public void flush()
```

Flushes this output.


[Back to member summary](#member-summary)

<a name="member-checkError-28--29-"></a>

### `checkError()`

```java
public boolean checkError()
```

Performs the check error operation.


[Back to member summary](#member-summary)

<a name="member-write-28-int-29-"></a>

### `write(int)`

```java
@Override
public void write(int value)
```

Writes the supplied data.


[Back to member summary](#member-summary)

<a name="member-write-28-byte-5b--5d--29-"></a>

### `write(byte[])`

```java
@Override
public void write(byte[] bytes)
```

Writes the supplied data.


[Back to member summary](#member-summary)

<a name="member-write-28-byte-5b--5d--2c-int-2c-int-29-"></a>

### `write(byte[],int,int)`

```java
@Override
public void write(byte[] bytes, int offset, int length)
```

Writes the supplied data.


[Back to member summary](#member-summary)

<a name="member-close-28--29-"></a>

### `close()`

```java
@Override
public void close()
```

Closes this resource.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
